Improvements to Resources, Control has add and make functions

--- a/css/basic.css
+++ b/css/basic.css
@@ -366,3 +366,9 @@ div.single-line.selected {
 	vertical-align: middle;
 	line-height: 32px;
 }
+
+
+.window .title.bar {
+	height: 32px;
+	background-color: #0D4F8B;
+}
