--- a/css/basic.css
+++ b/css/basic.css
@@ -353,7 +353,7 @@ div.single-line.selected {
 .title.bar {
 	height: 32px;
 	width: 100%;
-	text-align: center;
+	/* text-align: center; */
 	background-color: #FFFFFF;
 
 	-webkit-box-shadow: inset 0px -2px 2px -2px rgba(0,0,0,0.75);
@@ -371,4 +371,8 @@ div.single-line.selected {
 .window .title.bar {
 	height: 32px;
 	background-color: #0D4F8B;
+	color: #FFFFFF;
+	font-size: 13px;
+	line-height: 32px;
+	text-indent: 4px;
 }
