--- a/css/basic.css
+++ b/css/basic.css
@@ -580,4 +580,14 @@ html.dragging {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+
+
+}
+
+.cursor-pointer {
+	cursor: pointer;
+}
+
+.cursor-default {
+	cursor: default;
 }
