CSS changes for image admin Further browserifyifying Added context.body() function that returns the body Control from a Context. Bundling now works and deploys jsgui in a 1.2MB uncompressed file. Context menu seen to work

--- a/css/basic.css
+++ b/css/basic.css
@@ -591,3 +591,21 @@ html.dragging {
 .cursor-default {
 	cursor: default;
 }
+
+
+
+
+
+.web-admin-images .list .item {
+    width: 500px;
+    background-color: #EEEEEE;
+}
+
+.web-admin-images .list .item .id {
+    width: 70px;
+    float: left;
+}
+.web-admin-images .list .item .value {
+    width: 400px;
+    float: left;
+}
