Changes geared towards getting File_Manager working.

--- a/css/basic.css
+++ b/css/basic.css
@@ -665,6 +665,6 @@ html.dragging {
 .file-manager .info {
 	width: 400px;
 	height: 32px;
-	background-color: #ABCDEF;
+	background-color: #DFDFDF;
 	float: left;
 }
