--- a/css/basic.css
+++ b/css/basic.css
@@ -704,3 +704,16 @@ html.dragging {
 	margin-left: 2px;
 	line-height: 24px;
 }
+
+.radio-button-group.horizontal > div.radio-button {
+	display: inline;
+	margin-left: 4px;
+	margin-right: 4px;
+}
+
+div.radio-button > input {
+	position: relative;
+	top: 1px;
+	margin-left: 1px;
+	margin-right: 1px;
+}
